Verion 1.5.4
* Expose function determinelastmark5bframeoffset()

Verion 1.5.3
* Integer rounding error in m5slice
* Add ctypes-based Python bindings 
* Add Python examples (m5spec.py, m5stat.py, m5subband.py, m5time.py, m5tone.py, m5selfcorr.py)
* m5subband: extract a single subband by FFT-based filtering of a wideband input file
* m5pcal: now supports tones at non-integer MHz, better supports wideband recordings, 
  adds FFT length (--chunksize) option, and is updated to behave more DiFX-like
* m5d: adds complex decode (--double) and custom printout format (e.g., --format=%f)
* test5b: will now report skipped frames
* zerocorr: write results with %e to avoid scaling causing underflow results
* more const correctness
* functions added that mask bad values in channel-dependent manner from decoded VDIF streams if EDV4 is used.  Per-channel accounting of zero values is provided.
* Fix some data rate and frame rate calculations in mark5bfile.h
* New function: void snprintmark5bfilesummary(char *str, int maxLength, const struct mark5b_file_summary *sum)
* Change RPM name to vlbi-mark5access.*.rpm
* New option in test5b: can supply frames per second and then the true number of skipped frames can be evaluated.
* fixmark5b: don't seg fault if can't open files
* Many utilities: change from use of signal() to sigaction(), which is supposed to be more reliable.
* Version for DiFX-2.5, May 16, 2017

Version 1.5.2
* Post DiFX-2.4
* Detect Legacy VDIF

Version 1.5.1
* Improve behavior of fixmark5b() in the case that fill pattern is seen at the 1 second transition.
* m5bsum calculates frame rates now rather than just assuming 25600 frames per second
* Improve blanking of mark5b in fix case (make use of the TVG bit to blank frame by frame)
* Added support for "d2k" mode, which is Mark5B with sign and magnitude bits swapped
* m5bstate: complex sampling is now supported
* examples/makeheader: tool to make a SIGPROC pulsar filterbank compatible header.